# variant_forest

./: Cargo.toml
benches/: rf_big_nrow.rs
src/: binom.rs  boruta.rs  data_interface.rs  gini.rs  lib.rs  main.rs  mask.rs  random_forest.rs  random_number_generator.rs  tree.rs
src/data_interface/: multi_x.rs  three_val.rs  y_bool.rs
src/gini/: x_bool_y_bool.rs  x_threeval_y_bool.rs
src/random_number_generator/: factory.rs
tests/: boruta.rs  random_forest.rs  rf_perf.rs
