[package]
name = "variant_forest"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Piwoński <piwonski.kris@gmail.com"]
license = "AGPL"

[dev-dependencies]
float-cmp = "0.9"
serde_json = "1.0"
criterion = {version="0.4", features=["html_reports"]}

[profile.release]
debug = 1
incremental = true

[rust]
debuginfo-level = 1

[[bench]]
name = "rf_big_nrow"
harness = false